    gcc 4.1 or later with -O2 (which turns on -fstrict-aliasing) (Issue
    322).
 -- Properly terminate uses of mux_exec().  Most of these are protected by
    EV_TOP or something else.
 -- CLog::AppendLog() does not actually position log at end of existing
    log file. Net result is only that first two lines (Containing to
    INI/LOAD entries) are lost.
 -- Allow %=<name> to support single-letter attribute names and
    document. Issue 341.
 -- Fix WIDTH() to default to 78 instead of 24 (Issue 354).


Performance Enhancements:
~~~~~~~~~~~~~~~~~~~~~~~~

 -- In MEMORY_BASED, avoid malloc() call each time an attribute is
    added to an object.
 -- Optimize atr_add_raw_LEN() to reduce Firan load time from 40 seconds
    to 15 seconds (which includes firan.db, mail.db, and comsys.db).
    This translates to something upward of 28 MB/s.
 -- Optimize do_comsystem() ability to recognize what is not an alias.
    Alierak.
 -- Added reference counting to global registers which should improve
    performance and greatly reduce memory usage for games which use the
    queue heavily.
 -- Issue 207: Maintain message length in mail bag to avoid touching
    mail body.
 -- Issue 201: Trim priority queue data structures during @dbck to save
    memory.


Cosmetic Changes:
~~~~~~~~~~~~~~~~
 -- Increased width of certain columns in @list hashstats (Requests,
    Hits, and Checks) and @list allocations (Allocs).


Miscellaneous:
~~~~~~~~~~~~~
 -- Add mux_fopen() utility function to replace direct use of fopen().
 -- Updated config.guess, config.sub, and configure to later versions.
 -- Updated to autoconf 2.61.
 -- Refer to tinymux.org instead of tinymux.com.
 -- Added SQL readme (Issue 47).
 -- Updated to doxygen 1.5.1.
 -- Freshened ATTACK, BACKUPS, BETA, CREDITS, NOTES, README, and
    readme.txt.
 -- Documented Lbufref and Regref pools in 'wizhelp @list alloc'.
 -- Increase MAX_ALIASES_PER_PLAYER from 50 to 100.